@@ -4,7 +4,7 @@ if column.show_blank_record?(associated)
   show_blank_record = build_associated(column.association, parent_record)
 end
 disable_required_for_new = @disable_required_for_new
-@disable_required_for_new = !!show_blank_record unless (column.association.singular? && column.required?)
+@disable_required_for_new = !!show_blank_record unless (column.association.singular? && column.required?(action_for_validation?(parent_record)))
 subform_div_id = "#{sub_form_id(:association => column.name, :id => parent_record.id || generated_id(parent_record) || 99999999999)}-div"
 
 # render footer before rendering associated records, fixes create new on self-associations
